# skill-cli-kit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SPEC.md
docs/changes/2026-06-13-native-installer-distribution/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SPEC.md
docs/changes/2026-06-14-update-self-release-by-default/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SPEC.md
docs/changes/2026-06-15-generated-cli-sync-skill-command/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SPEC.md
docs/changes/2026-06-16-windows-structure-parity-review/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  SPEC.md
scripts/: check_install.sh  install_cli.sh  install_remote.ps1  install_remote.sh  package_release.sh  sync_skill.sh  update_cli.sh
skill/: SKILL.md
skill/agents/: openai.yaml
skill/references/: external-practices.md  patterns.md
src/skill_cli_kit/: __init__.py  cli.py
tests/: test_cli.py
