[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-cli-kit"
version = "0.1.2"
description = "Portable toolkit for turning reusable agent behavior into skill-backed CLI projects."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
skillcli = "skill_cli_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
